[build-system]
requires = [
    "setuptools",
    "setuptools_dso>=2.7a1",
    "setuptools_dso>=2.11a2; python_version>='3.12'",
    "wheel",
    "numpy>=1.7",
    "Cython>0.29.32",
    "epicscorelibs>=7.0.3.99.2.0a1",
    "epicscorelibs>=7.0.7.99.1.2a2; python_version>='3.12'",
    "pvxslibs>=1.3.1",
    "pvxslibs>=1.4.0; python_version>='3.12'",
]
